--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: python
-python:
-  - "3.8"
-  - "nightly"
-install:
-  - "pip install -r requirements.txt"
+python: 3.8
+install: pip install -r requirements.txt
 script: python -m pytest test_requests.py
